ADD - command to change dinamically enum category list
